--- a/app/src/main/res/layout/list_item_account.xml
+++ b/app/src/main/res/layout/list_item_account.xml
@@ -1,63 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:gravity="center_vertical"
-    android:orientation="horizontal"
-    android:id="@+id/list_item_account"
-    >
-    <LinearLayout
-        android:layout_width="wrap_content"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/list_item_cardview"
+        android:layout_width="340dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginLeft="10dp">
-        <TextView
-            android:id="@+id/list_item_account_name_textview"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="0dp"
+        card_view:cardCornerRadius="0dp"
+        card_view:cardElevation="2sp"
+        card_view:cardUseCompatPadding="true">
 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Checkings Account"
+        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/list_item_account"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
             android:gravity="center_vertical"
-            android:textSize="20sp"
-            />
+            android:orientation="horizontal">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            >
-            <TextView
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/last_updated"
-                android:layout_marginRight="2dp"
-                android:textSize="11sp"
-                android:textStyle="italic"/>
-            <TextView
-                android:id="@+id/list_item_account_date"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/account_date"
-                android:textSize="11sp"
-                android:textStyle="italic"
-                />
+                android:layout_marginLeft="10dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/list_item_account_name_textview"
+
+                    android:layout_width="220dp"
+                    android:layout_height="wrap_content"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:singleLine="true"
+                    android:text="Vanguard Brokerage"
+                    android:textSize="20sp" />
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="2dp"
+                        android:text="@string/last_updated"
+                        android:textSize="11sp"
+                        android:textStyle="italic" />
+
+                    <TextView
+                        android:id="@+id/list_item_account_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/account_date"
+                        android:textSize="11sp"
+                        android:textStyle="italic" />
+
+                </LinearLayout>
+
 
             </LinearLayout>
 
-
+            <TextView
+                android:id="@+id/list_item_account_balance_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="10dp"
+                android:layout_weight="1"
+                android:gravity="right|center_vertical"
+                android:text="$1,337.40"
+                android:textSize="20sp" />
 
         </LinearLayout>
 
-    <TextView
-        android:id="@+id/list_item_account_balance_textview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:gravity="right|center_vertical"
-        android:text="$1,337.40"
-        android:textSize="20sp"
-        android:layout_marginRight="10dp"
-        />
+    </android.support.v7.widget.CardView>
 
-    </LinearLayout>
+
+</RelativeLayout>
