--- a/app/src/main/res/layout/list_item_budget.xml
+++ b/app/src/main/res/layout/list_item_budget.xml
@@ -22,7 +22,6 @@
             android:layout_marginTop="0dp"
             android:orientation="horizontal">
 
-
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -32,9 +31,11 @@
 
                 <TextView
                     android:id="@+id/list_item_budget_name_textview"
-                    android:layout_width="wrap_content"
+                    android:layout_width="220dp"
                     android:layout_height="wrap_content"
                     android:gravity="left"
+                    android:singleLine="true"
+                    android:ellipsize="end"
                     android:text="@string/budget_name"
                     android:textSize="19sp" />
 
