--- a/app/src/main/res/layout/budget_dialog.xml
+++ b/app/src/main/res/layout/budget_dialog.xml
@@ -49,7 +49,7 @@
         android:layout_marginTop="180dp"
         android:layout_alignParentRight="true"
         android:layout_marginRight="50dp"
-        android:text="Save"
+        android:text="@string/button_save"
         />
 
 
@@ -60,7 +60,7 @@
         android:layout_toLeftOf="@+id/budget_save_button"
         android:layout_marginRight="25dp"
         android:layout_alignBottom="@+id/budget_save_button"
-        android:text="Cancel"/>
+        android:text="@string/button_cancel"/>
 
 
 </RelativeLayout>
