--- a/app/src/main/res/layout/datepicker.xml
+++ b/app/src/main/res/layout/datepicker.xml
@@ -11,8 +11,7 @@
         android:layout_height="wrap_content"
         android:calendarViewShown="true"
         android:datePickerMode="calendar"
-        android:dayOfWeekBackground="@color/theme">
-
+        >
     </DatePicker>
 
     <Button
@@ -23,7 +22,7 @@
         android:layout_marginRight="25dp"
         android:layout_toLeftOf="@+id/save_button"
         android:background="@null"
-        android:text="Cancel"
+        android:text="@string/button_cancel"
         android:textColor="#00C8C8"
         android:textStyle="bold"
         android:fontFamily="sans-serif-light"/>
@@ -38,7 +37,7 @@
         android:layout_marginRight="16dp"
         android:layout_marginBottom="10dp"
         android:background="@null"
-        android:text="Save"
+        android:text="@string/button_save"
         android:textColor="#00C8C8"
         android:textStyle="bold"
         android:fontFamily="sans-serif-light"/>
