--- a/app/src/main/res/layout/drawer_list_item.xml
+++ b/app/src/main/res/layout/drawer_list_item.xml
@@ -3,7 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:gravity="center_vertical"
+    android:orientation="horizontal">
+
+    <ImageView
+        android:id="@+id/drawer_li_icons"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:layout_marginLeft="16dp"
+        tools:background="@drawable/ic_wallet_grey"/>
 
     <TextView
         android:id="@+id/drawer_li_labels"
@@ -13,8 +21,7 @@
         android:layout_marginLeft="25dp"
         tools:text="Budgets"
         android:fontFamily="sans-serif-medium"
-
-        android:textSize="14dp"
+        android:textSize="16sp"
         android:textColor="@color/textview"
         />
 
