--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="white">#ffffff</color>
 
     <color name="theme">#00C8C8</color>
+    <color name="theme_darker">#00B4B4</color>
     <color name="actionbar">#00C8C8</color>
 
     <color name="light_stripe">#FAFAFA</color>
