--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -104,7 +104,7 @@
             android:layout_below="@id/clear_data"
             android:layout_marginLeft="25dp"
             android:layout_marginTop="-5dp"
-            android:text="Completely remove all existing data."
+            android:text="Completely remove all existing data"
             android:textSize="12sp"
             />
 
@@ -153,7 +153,7 @@
                android:layout_marginLeft="25dp"
                android:layout_below="@id/dummydata"
                android:layout_marginTop="-5dp"
-               android:text="For testing purposes only."
+               android:text="For testing purposes only"
                android:textSize="12sp" />
 
 
