--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/container_settings"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/container_settings">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/security_header"
@@ -55,8 +55,8 @@
         android:id="@+id/data_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
         android:layout_below="@id/security_view"
+        android:layout_marginLeft="25dp"
         android:layout_marginTop="30dp"
         android:fontFamily="sans-serif-medium"
         android:text="DATA"
@@ -85,18 +85,17 @@
             android:layout_marginLeft="25dp"
             android:layout_marginTop="10dp"
             android:text="Export Data to CSV"
-            android:textSize="18sp"
-            />
+            android:textSize="18sp" />
 
         <TextView
             android:id="@+id/clear_data"
             android:layout_width="130dp"
             android:layout_height="25dp"
-            android:layout_marginLeft="25dp"
             android:layout_below="@id/exportdata"
+            android:layout_marginLeft="25dp"
             android:layout_marginTop="20dp"
-            android:textSize="18sp"
-            android:text="Clear Data"/>
+            android:text="Clear Data"
+            android:textSize="18sp" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -105,8 +104,7 @@
             android:layout_marginLeft="25dp"
             android:layout_marginTop="-5dp"
             android:text="Completely remove all existing data"
-            android:textSize="12sp"
-            />
+            android:textSize="12sp" />
 
     </RelativeLayout>
 
@@ -114,8 +112,8 @@
         android:id="@+id/demo_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="25dp"
         android:layout_below="@id/data_view"
+        android:layout_marginLeft="25dp"
         android:layout_marginTop="30dp"
         android:fontFamily="sans-serif-medium"
         android:text="DEMO"
@@ -132,33 +130,81 @@
         android:layout_marginTop="2dp"
         android:background="@color/textview" />
 
-       <RelativeLayout
-           android:id="@+id/demo_view"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:layout_below="@id/demo_header">
+    <RelativeLayout
+        android:id="@+id/demo_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/demo_header">
 
-           <TextView
-               android:id="@+id/dummydata"
-               android:layout_width="200dp"
-               android:layout_height="25dp"
-               android:layout_marginLeft="25dp"
-               android:layout_marginTop="10dp"
-               android:text="Initialize Dummy Data"
-               android:textSize="18sp" />
+        <TextView
+            android:id="@+id/dummydata"
+            android:layout_width="200dp"
+            android:layout_height="25dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="10dp"
+            android:text="Initialize Dummy Data"
+            android:textSize="18sp" />
 
-           <TextView
-               android:layout_width="200dp"
-               android:layout_height="wrap_content"
-               android:layout_marginLeft="25dp"
-               android:layout_below="@id/dummydata"
-               android:layout_marginTop="-5dp"
-               android:text="For testing purposes only"
-               android:textSize="12sp" />
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/dummydata"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="-5dp"
+            android:text="For testing purposes only"
+            android:textSize="12sp" />
 
 
-       </RelativeLayout>
+    </RelativeLayout>
 
+    <TextView
+        android:id="@+id/support_header"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/demo_view"
+        android:layout_marginLeft="25dp"
+        android:layout_marginTop="30dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="SUPPORT"
+        android:textSize="12sp"
+        android:textStyle="bold" />
+
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_below="@id/support_header"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="2dp"
+        android:background="@color/textview" />
+
+
+    <RelativeLayout
+        android:id="@+id/report_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/support_header">
+
+        <TextView
+            android:id="@+id/contactus"
+            android:layout_width="170dp"
+            android:layout_height="25dp"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="10dp"
+            android:text="Report Bugs"
+            android:textSize="18sp" />
+
+        <TextView
+            android:layout_width="230dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/contactus"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="-5dp"
+            android:text="Comments and suggestions are welcome"
+            android:textSize="12sp" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
 
