--- a/app/src/main/res/layout/budget_dialog.xml
+++ b/app/src/main/res/layout/budget_dialog.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/trans_relative_layout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:layout_gravity="center"
-    android:orientation="vertical">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    >
 
     <TextView
         android:id="@+id/budget_title_dialog"
-        android:layout_margin="5dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
+        android:layout_marginTop="24dp"
+        android:layout_marginLeft="24dp"
         android:text="@string/create_budget_dialog"
-        android:textSize="24sp"
-        android:textStyle="bold" />
+        android:textSize="20sp"
+        android:fontFamily="sans-serif-medium"
+         />
 
     <EditText
         android:id="@+id/budgetNameBox"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="40dp"
-        android:layout_marginTop="58dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="24dp"
+        android:layout_below="@id/budget_title_dialog"
+        android:layout_marginTop="20dp"
         android:inputType="textCapSentences"
         android:editable="true"
         android:focusable="true"
@@ -33,9 +34,11 @@
 
     <EditText
         android:id="@+id/budgetAmountBox"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="110dp"
+        android:layout_marginRight="24dp"
+        android:layout_below="@id/budgetNameBox"
+        android:layout_marginTop="10dp"
         android:layout_alignLeft="@id/budgetNameBox"
         android:hint="Amount"
         android:imeOptions="actionDone"
@@ -46,9 +49,11 @@
         android:id="@+id/budget_save_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="180dp"
+        android:layout_below="@id/budgetAmountBox"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="8dp"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="50dp"
+        android:layout_marginRight="8dp"
         android:text="@string/button_save"
         />
 
@@ -58,8 +63,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toLeftOf="@+id/budget_save_button"
-        android:layout_marginRight="25dp"
-        android:layout_alignBottom="@+id/budget_save_button"
+        android:layout_marginRight="8dp"
+        android:layout_alignBaseline="@+id/budget_save_button"
         android:text="@string/button_cancel"/>
 
 
