Latest from Dp, working on toolbar conversion

--- a/app/src/main/res/layout/fragment_addaccount.xml
+++ b/app/src/main/res/layout/fragment_addaccount.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="16dp">
+    android:layout_height="wrap_content"
+    >
+    <include android:id="@+id/toolbar"
+        android:layout="@layout/toolbar"/>
+
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/toolbar">
+   <RelativeLayout
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       >
+
 
     <TextView
         android:id="@+id/configure_title"
@@ -177,4 +190,6 @@
         android:textSize="20sp" />
 
 
+</RelativeLayout>
+</ScrollView>
 </RelativeLayout>
