--- a/app/src/main/res/layout/activity_addaccount.xml
+++ b/app/src/main/res/layout/activity_addaccount.xml
@@ -4,6 +4,10 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
+    <include
+        android:id="@+id/toolbar"
+        android:layout="@layout/toolbar"/>
+
     <FrameLayout
         android:id="@+id/addaccount_frame"
         android:layout_width="match_parent"
